# some_task

./: .dockerignore  .flaskenv  .gitignore  .testenv  Dockerfile  Makefile  README.md  cookiecutter-options.yml  docker-compose.yml  production.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
compose/local/: Dockerfile
compose/production/flask/: Dockerfile
compose/production/node/: Dockerfile  default.conf
frontend/: .gitignore  package.json
frontend/src/: App.vue  settings.js  text-client.js
frontend/src/components/: Loader.vue  SentencesDialog.vue  SimilarSentences.vue  TextContent.vue  TextInput.vue  TextsPanel.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  Text.vue
migrations/versions/: 31b8f87d7522_.py
small_tasks/: duplicate_number_searcher.py  snail_game.py
tests/: conftest.py  factories.py  test_user.py
text_api/: app.py  celery_app.py  config.py  extensions.py  manage.py  wsgi.py
text_api/api/: __init__.py  views.py
text_api/api/resources/: __init__.py  text.py  user.py
text_api/api/schemas/: __init__.py  text.py  user.py
text_api/auth/: __init__.py  helpers.py  views.py
text_api/commons/: apispec.py  pagination.py  sentences_finder.py
text_api/commons/templates/: swagger.j2
text_api/models/: __init__.py  blacklist.py  text.py  user.py
text_api/tasks/: sentences.py
