[tool.poetry]
name = "test_task"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "text_api" },
    { include = "text_api/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
marshmallow = ">=3"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-Migrate = "^2.5.3"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
Flask-JWT-Extended = "^3.25.0"
marshmallow-sqlalchemy = "^0.24.1"
python-dotenv = "^0.15.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
apispec = {extras = ["yaml"], version = "^4.0.0"}
apispec-webframeworks = "^0.5.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
